--- a/backend/productApi/src/main/resources/application.properties
+++ b/backend/productApi/src/main/resources/application.properties
@@ -3,8 +3,9 @@ quarkus.datasource.username=username
 quarkus.datasource.password=password
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/nutrition_products_db
-quarkus.hibernate-orm.packages=nutritionAPI
+quarkus.hibernate-orm.packages=org.acme
 quarkus.hibernate-orm.database.generation = drop-and-create
 
 quarkus.log.category."org.hibernate".level=DEBUG
 quarkus.log.category."io.quarkus.hibernate.orm".level=DEBUG
+quarkus.http.port=8080
