--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "date-fns": "^4.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
