--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "chart.js": "^3.9.1",
+    "date-fns": "^4.1.0",
+    "vue-chart-3": "^3.1.8"
   }
 }
