--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,7 +1,8 @@
-version: "3.0"
+version: "3.8"
 services:
-  tracker:
-    container_name: tracker-api-db
+
+  tracker-db:
+    container_name: tracker-db
     image: mariadb:10.7
     ports:
       - "3406:3306"
@@ -10,8 +11,20 @@ services:
       - MYSQL_PASSWORD=password
       - MYSQL_USER=user
       - MYSQL_DATABASE=tracker_db
-  productApi:
-    container_name: product-api-db
+    networks:
+      - backend-network
+    depends_on:
+      product-db:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 5s
+      retries: 5
+      start_period: 5s
+      timeout: 2s
+
+  product-db:
+    container_name: product-db
     image: mariadb:10.7
     ports:
       - "3405:3306"
@@ -20,3 +33,49 @@ services:
       - MYSQL_PASSWORD=password
       - MYSQL_USER=user
       - MYSQL_DATABASE=product_db
+    networks:
+      - backend-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 5s
+      retries: 5
+      start_period: 5s
+      timeout: 2s
+
+  product-api:
+    container_name: product-api
+    image: golang:1.20-alpine
+    working_dir: /app
+    volumes:
+      - ./productApi:/app
+    command: sh -c "go mod tidy && go build -o main ./api/cmd/main.go && ./main"
+    ports:
+      - "8081:8081"
+    depends_on:
+      product-db:
+        condition: service_healthy
+    networks:
+      - backend-network
+
+  tracker-api:
+    container_name: tracker-api
+    image: golang:1.20-alpine
+    working_dir: /app
+    volumes:
+      - ./tracker:/app
+    command: sh -c "go mod tidy && go build -o main ./api/cmd/main.go && ./main"
+    ports:
+      - "8082:8082"
+    depends_on:
+      product-db:
+        condition: service_healthy
+      tracker-db:
+        condition: service_healthy
+      product-api:
+        condition: service_started
+    networks:
+      - backend-network
+
+networks:
+  backend-network:
+    driver: bridge
