--- a/backend/shoppingListApi/.env
+++ b/backend/shoppingListApi/.env
@@ -1,1 +1,1 @@
-DATABASE_URI=mysql://user:password@localhost:3404/shoppinglist_db
+DATABASE_URI=mysql://user:password@shoppingList-db:3306/shoppingList_db
