--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "chart.js": "^3.9.1",
     "date-fns": "^4.1.0",
     "vue": "^3.5.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
