--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:18-alpine
 
 WORKDIR /app
-COPY . .
+
+COPY package*.json ./
 RUN npm install
+
+COPY . .
+
 EXPOSE 1420
+
 CMD ["npm", "run", "dev"]
